--- a/clients/data-client/build.gradle
+++ b/clients/data-client/build.gradle
@@ -1,7 +1,8 @@
 dependencies {
     implementation project(":domain")
 
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-    implementation 'io.github.openfeign:feign-hc5'
-    implementation 'io.github.openfeign:feign-micrometer'
+    implementation ("com.fasterxml.jackson.core:jackson-annotations")
+    implementation ("org.springframework.cloud:spring-cloud-starter-openfeign")
+    implementation ("io.github.openfeign:feign-hc5")
+    implementation ("io.github.openfeign:feign-micrometer")
 }
