--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ include ':application-core'
 include ':domain'
 include 'infrastructure:db-core'
 include 'library:swagger'
+include 'library:logging'
 include 'clients:data-client'
