--- a/api/build.gradle
+++ b/api/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation project(":domain")
     implementation project(":application-core")
     implementation project(":clients:data-client")
-
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation project(":library:logging")
+    implementation project(":library:swagger")
+    implementation ("org.springframework.boot:spring-boot-starter-web")
 }
