--- a/application-core/build.gradle
+++ b/application-core/build.gradle
@@ -1,7 +1,13 @@
 dependencies {
     implementation ("org.springframework:spring-tx")
     implementation project(":infrastructure:db-core")
+    implementation project(":clients:data-client")
+
+    implementation ("io.jsonwebtoken:jjwt-api:0.12.6")
+    implementation ("io.jsonwebtoken:jjwt-impl:0.12.6")
+    implementation ("io.jsonwebtoken:jjwt-jackson:0.12.6")
 
     compileOnly ("org.springframework:spring-context")
+    compileOnly ("org.springframework.cloud:spring-cloud-starter-openfeign")
     compileOnly project(":domain")
 }
