[Fix] 인증/인가 인터셉터 제거 및 롬북 의존성 수정

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -10,4 +10,8 @@ dependencies {
     implementation project(":library:logging")
     implementation project(":library:swagger")
     implementation ("org.springframework.boot:spring-boot-starter-web")
+
+    compileOnly 'org.projectlombok:lombok'
+
+    annotationProcessor 'org.projectlombok:lombok'
 }
