--- a/infrastructure/db-core/build.gradle
+++ b/infrastructure/db-core/build.gradle
@@ -3,6 +3,10 @@ dependencies {
 
     compileOnly project(':domain')
 
+    compileOnly 'org.projectlombok:lombok'
+
+    annotationProcessor 'org.projectlombok:lombok'
+
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly 'com.h2database:h2'
 }
