--- a/application-core/build.gradle
+++ b/application-core/build.gradle
@@ -10,4 +10,8 @@ dependencies {
     compileOnly ("org.springframework:spring-context")
     compileOnly ("org.springframework.cloud:spring-cloud-starter-openfeign")
     compileOnly project(":domain")
+
+    compileOnly 'org.projectlombok:lombok'
+
+    annotationProcessor 'org.projectlombok:lombok'
 }
