--- a/application-core/build.gradle
+++ b/application-core/build.gradle
@@ -3,6 +3,8 @@ dependencies {
     implementation project(":infrastructure:db-core")
     implementation project(":clients:data-client")
 
+    implementation("com.opencsv:opencsv:5.9")
+
     implementation ("io.jsonwebtoken:jjwt-api:0.12.6")
     implementation ("io.jsonwebtoken:jjwt-impl:0.12.6")
     implementation ("io.jsonwebtoken:jjwt-jackson:0.12.6")
